--- a/styles.css
+++ b/styles.css
@@ -1,14 +1,266 @@
 html{
-    padding: 0;
+    width:100%;
     margin: 0;
-}
+    padding: 0;
+ }
 body{
-
-    background-color: #333333;
+    width: 100%;
+    background-color:  #1C1C1C;
+    background-size:1553px 982px;
 }
 ul{
     list-style-type: none;
 }
+
+ .left{
+    display: flex;
+    flex-direction: column;
+    float: left;
+    top: 100px;
+    left: 30px;
+    position: absolute;
+     
+  } 
+   .right{
+    display: flex;
+    flex-direction: column;
+    float: right;
+    color: #ddd;
+    /* font-family: 'poppins';
+    font-size: 1.8em; */
+  } 
+  #img{
+    position: fixed;
+    top: 1px;
+    left: 565px;;
+    width:513px;
+    height: 1182px;     
+   } 
+   #ico{
+      
+        display:inline-flex;
+        justify-content: space-between;
+        float: right;
+        position: fixed;
+        margin: 2px;
+        padding: 4pc;
+        right: 100px;
+        bottom:0px;
+  } 
+  .navi{
+     
+        display: flex;
+        flex-direction: row;
+         justify-content: space-between; 
+        color:#fff;
+         
+        font-family: 'poppins';
+        font-size: 1em;
+        font-weight: bold;
+  }
+  .rest{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  float: right;
+  top: 90px;
+  right: 58px;
+  position: fixed;
+  cursor: pointer;
+  
+}
+   /* The container <div> - needed to position the dropdown content */
+   .dropdown {
+       display: flexbox;
+       display: flex;
+       float: right;
+    
+         /* position:  absolute; */
+   }
+    
+   /* Dropdown Content (Hidden by Default) */
+   .dropdown-content {
+     display: none;
+     position: absolute;
+     background-color: black;
+     right:0px;
+     min-width: 360px;
+     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+     z-index: 1;
+   }
+    
+   /* Links inside the dropdown */
+   .dropdown-content a {
+     color:white;
+     padding: 12px 16px;
+     text-decoration: none;
+     display: block;
+   }  
+   
+   /* Change color of dropdown links on hover */
+     .dropdown-content a:hover {background-color: #ddd;}  
+   
+   /* Show the dropdown menu on hover */
+     .dropdown:hover .dropdown-content {display: block;}
+     
+   /* Change the background color of the dropdown button when the dropdown content is shown */
+     .dropdown:hover .dropbtn {background-color: #2F2F2F;}  
+  
+    .ccc{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+  }
+  .a1{
+    width: 15px;
+    height: 15px;
+    left: 1442px;
+    top: 262px;
+    border-radius: 50%;
+    background-color: #9C2051;
+  }  
+  .a2{
+    
+    width: 15px;
+    height: 15px;
+    left: 1442px;
+    top: 314px;
+    border-radius: 50%;
+    
+  }
+  .a3{
+     
+    width: 15px;
+    height: 15px;
+    left: 1442px;
+    top: 374px;
+    border-radius: 50%;
+  
+  }
+  .a4{
+     
+    width: 15px;
+    height: 15px;
+    left: 1442px;
+    top: 374px;
+    border-radius: 50%;
+   
+  }
+  .a5{  
+    width: 15px;
+    height: 15px;
+    left: 1442px;
+    top: 427px;
+    border-radius: 50%;
+     
+  }
+  
+  .a6{
+     
+    width: 15px;
+    height: 15px;
+    left: 1442px;
+    top: 477px;
+    border-radius: 50%;
+  }
+  #ijambo{
+    display: flex;
+     font-family: 'poppins';
+     font-size: 1.2em;
+    color: #FFFFFF;
+    text-align: left;
+    position:  fixed;
+    padding: 2pc;
+    bottom: 0px;
+  }  
+
+.listing{
+    position: fixed;
+    right: 50px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* }
 
 @media  only screen and (max-width:414px) {
     body{
@@ -47,17 +299,18 @@ ul{
         width: 30%;
         height: fit-content;
     } 
-}
-.ashimwe{
+} */
+
+/* .ashimwe{ */
     /* Group 3 */
-position: absolute;
+/* position: absolute;
 width: 525px;
 height: 154px;
 left: 34px;
-top: 240px;
+top: 240px; */
 /* ASHIMWE, I’m NTWARI FIACRE */
 
-position: absolute;
+/* position: absolute;
 width: 525px;
 height: 154px;
 left: 34px;
@@ -72,16 +325,16 @@ line-height: 77px;
 color: #C32865;
 
 
-}
-.ccc{
+} */
+/* .ccc{
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
 }
-.fifi{
+.fifi{ */
     /* fiacre & ntwari*/
-position: absolute;
+/* position: absolute;
 width: 525px;
 height: 154px;
 left: auto;
@@ -101,9 +354,9 @@ height: 53px;
 left: 250px;
 top: 710px;
 }
-#watch{
+#watch{ */
     /* watch Resume */
-
+/* 
 position: absolute;
 width: 233px;
 height: 39px;
@@ -114,9 +367,9 @@ font-family: 'Inter';
 font-style: normal;
 font-weight: 800;
 font-size: 32px;
-line-height: 39px;
+line-height: 39px; */
 /* identical to box height */
-
+/* 
 color: #FFFFFF;
 
 
@@ -163,33 +416,33 @@ color: #FFFFFF;
     left: 1442px;
     top: 477px;
 }
-.listing{
+.listing{ */
     /* 🦆 icon "hamburger menu" */
 
-position: absolute;
+/* position: absolute;
 width: 48.4px;
 height: 44px;
 left: 1414px;
 top: 43px;
 
 } 
- #face{
+ #face{ */
    /* 🦆 icon "facebook" */
-position: absolute;
+/* position: absolute;
 left: 1051px;
 top:  900px;
  
  }
- #goog{
+ #goog{ */
   /* 🦆 icon "google" */
-position: absolute;
+/* position: absolute;
 left: 1207px;
 top:  900px;
 
  }
-#inst{
+#inst{ */
 /* 🦆 icon "instagram" */
-position: absolute;
+/* position: absolute;
 left: 1129px;
 top:  900px;
 }
@@ -198,9 +451,9 @@ position: absolute;
 left: 1355px;
 top:  900px;
 }
-#twi{
+#twi{ */
     /* 🦆 icon "twitter" */
-position: absolute;
+/* position: absolute;
 left: 1269px;
 top:  900px;
 }
@@ -223,18 +476,18 @@ border: 6px solid #FFf;
 }
 .dropbtn {
     background-color:#2F2F2F;
-   } 
+   }  */
    
    /* The container <div> - needed to position the dropdown content */
-   .dropdown {
+   /* .dropdown {
  
          position:  absolute;
          
         display: inline-block;
    }
-   
+    */
    /* Dropdown Content (Hidden by Default) */
-   .dropdown-content {
+   /* .dropdown-content {
      display: none;
      position: absolute;
      background-color: black;
@@ -242,22 +495,22 @@ border: 6px solid #FFf;
      min-width: 360px;
      box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
      z-index: 1;
-   }
+   } */
    
    /* Links inside the dropdown */
-   .dropdown-content a {
+   /* .dropdown-content a {
      color:white;
      padding: 12px 16px;
      text-decoration: none;
      display: block;
-   }
+   } */
    
    /* Change color of dropdown links on hover */
-   .dropdown-content a:hover {background-color: #ddd;}
+   /* .dropdown-content a:hover {background-color: #ddd;} */
    
    /* Show the dropdown menu on hover */
-   .dropdown:hover .dropdown-content {display: block;}
-   
+   /* .dropdown:hover .dropdown-content {display: block;}
+    */
    /* Change the background color of the dropdown button when the dropdown content is shown */
-   .dropdown:hover .dropbtn {background-color: #2F2F2F;}
+   /* .dropdown:hover .dropbtn {background-color: #2F2F2F;} */
  
