--- a/edu.css
+++ b/edu.css
@@ -1,13 +1,325 @@
 html{
+    width:100%;
+    margin: 0;
     padding: 0;
 }
 body{
     background-image: url("tomy-boy-.jpg");
     background-repeat: no-repeat;
     background-size: 1540px 982px;
+}
+ul{
+    list-style-type:  none;
+}
+.right{
+    display: flex;
+    flex-direction: column;
+    float: right;
+    
+    padding-right: 3pc;
+     
+  }
+  .navi{
+    display: flex;
+    flex-direction: row;
+     justify-content: space-between; 
+    color:#fff;
+     
+    font-family: 'poppins';
+    font-size: 1em;
+    font-weight: bold;
+  } 
+  .left{
+    display: flex;
+    flex-direction: column;
+    float: left;
+    color: #ddd;
+    padding-left: 28px;
+  
+    font-family: 'poppins';
+    font-size: 1.8em;
+  
+  }
+  .rest{
+    display: flex;
+    flex-direction: column;
+    float: right;
+    cursor: pointer;
+    padding-right: 2pc;
+    padding-top: 2pc;
+  }
+  #ico{
+    display:inline-flex;
+    float: right;
+    position: fixed;
+    margin: 2px;
+    padding: 4pc;
+    padding-right: 4pc;
+    right: 0px;
+    bottom:0px;
+  }
+   /* The container <div> - needed to position the dropdown content */
+   .dropdown {
+       display: flexbox;
+       display: flex;
+       float: right;
+  
+         /* position:  absolute; */
+   }
+   
+   /* Dropdown Content (Hidden by Default) */
+   .dropdown-content {
+     display: none;
+     position: absolute;
+     background-color: black;
+     right:0px;
+     min-width: 360px;
+     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+     z-index: 1;
+   }
+   
+   /* Links inside the dropdown */
+   .dropdown-content a {
+     color:white;
+     padding: 12px 16px;
+     text-decoration: none;
+     display: block;
+   }
+   
+   /* Change color of dropdown links on hover */
+   .dropdown-content a:hover {background-color: #ddd;}
+   
+   /* Show the dropdown menu on hover */
+   .dropdown:hover .dropdown-content {display: block;}
+   
+   /* Change the background color of the dropdown button when the dropdown content is shown */
+   .dropdown:hover .dropbtn {background-color: #2F2F2F;}
+  
+   .ccc{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+  }
+  .a1{
+    width: 15px;
+    height: 15px;
+    left: 1442px;
+    top: 262px;
+    border-radius: 50%;
+
+  }  
+  .a2{
+    
+    width: 15px;
+    height: 15px;
+    left: 1442px;
+    top: 314px;
+    border-radius: 50%;
+  }
+  .a3{
+     
+    width: 15px;
+    height: 15px;
+    left: 1442px;
+    top: 374px;
+    border-radius: 50%;
+  }
+  .a4{
+     
+    width: 15px;
+    height: 15px;
+    left: 1442px;
+    top: 374px;
+    border-radius: 50%;
+  }
+  .a5{  
+    width: 15px;
+    height: 15px;
+    left: 1442px;
+    top: 427px;
+    border-radius: 50%;
+  }
+  
+  .a6{
+     
+    width: 15px;
+    height: 15px;
+    left: 1442px;
+    top: 477px;
+    border-radius: 50%;
+    
+  }
+  
+.my{
+    
+font-family: 'Inter';
+font-style: normal;
+font-weight: 700;
+font-size: 40px;
+line-height: 48px;
 
 }
-@media  only screen and (max-width:800px) {
+
+.para{
+box-sizing: border-box;
+
+ 
+width: 551px;
+height: 281px;
+left: 214px;
+top: 414.4px;
+
+font-family: 'Inter';
+font-style: normal;
+font-weight: 100;
+font-size: 20px;
+line-height: 38px;
+
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* @media  only screen and (max-width:800px) {
     .body{
         width:100%;
         height:100%;
@@ -98,31 +410,16 @@ ul{
     left: 1442px;
     top: 477px;
 }
-.listing{
+.listing{ */
     /* 🦆 icon "hamburger menu" */
 
-position: absolute;
+/* position: absolute;
 width: 48.4px;
 height: 44px;
 left: 1414px;
 top: 43px;
 }
-.sp{
-position: absolute;
-width: 306px;
-height: 48px;
-left: 214px;
-top: 104.4px;
-
-font-family: 'Poppins';
-font-style: normal;
-font-weight: 500;
-font-size: 32px;
-line-height: 48px;
-
-color: #FF2759;
-
-}
+ 
 .my{
     
 position: absolute;
@@ -156,23 +453,23 @@ line-height: 48px;
 
 color: #FFFFFF;
 }
-#face{
+#face{ */
     /* 🦆 icon "facebook" */
- position: absolute;
+ /* position: absolute;
  left: 1051px;
  top: 900px;
   
   }
-  #goog{
+  #goog{ */
    /* 🦆 icon "google" */
- position: absolute;
+ /* position: absolute;
  left: 1207px;
  top: 900px;
  
   }
- #inst{
+ #inst{ */
  /* 🦆 icon "instagram" */
- position: absolute;
+ /* position: absolute;
  left: 1129px;
  top:  900px;
  }
@@ -181,26 +478,26 @@ color: #FFFFFF;
  left: 1355px;
  top:  900px;
  }
- #twi{
+ #twi{ */
      /* 🦆 icon "twitter" */
- position: absolute;
+ /* position: absolute;
  left: 1269px;
  top:  900px;
  }
  .dropbtn {
     background-color:#2F2F2F;
-   } 
+   }  */
    
    /* The container <div> - needed to position the dropdown content */
-   .dropdown {
+   /* .dropdown {
  
          position:  absolute;
          
         display: inline-block;
    }
-   
+    */
    /* Dropdown Content (Hidden by Default) */
-   .dropdown-content {
+   /* .dropdown-content {
      display: none;
      position: absolute;
      background-color: black;
@@ -208,22 +505,22 @@ color: #FFFFFF;
      min-width: 360px;
      box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
      z-index: 1;
-   }
+   } */
    
    /* Links inside the dropdown */
-   .dropdown-content a {
+   /* .dropdown-content a {
      color:white;
      padding: 12px 16px;
      text-decoration: none;
      display: block;
    }
-   
+    */
    /* Change color of dropdown links on hover */
-   .dropdown-content a:hover {background-color: #ddd;}
+   /* .dropdown-content a:hover {background-color: #ddd;} */
    
    /* Show the dropdown menu on hover */
-   .dropdown:hover .dropdown-content {display: block;}
+   /* .dropdown:hover .dropdown-content {display: block;} */
    
    /* Change the background color of the dropdown button when the dropdown content is shown */
-   .dropdown:hover .dropbtn {background-color: #2F2F2F;}
- 
+   /* .dropdown:hover .dropbtn {background-color: #2F2F2F;}
+  */
