--- a/edu.css
+++ b/edu.css
@@ -8,6 +8,61 @@ body{
     background-repeat: no-repeat;
     background-size: 1540px 982px;
 }
+#number{
+  position: sticky;
+  width: 250px;
+  height: 23px;
+  left: 325px;
+  top: 31px;
+}
+#line{
+  position:sticky;
+  width: 9px;
+        height: 30px;
+        left: 451px;
+        top: 31px;
+}
+@media only screen and( width:414px){
+  body{
+    width: 100%;
+    height: 982px;
+  }
+  #box_edu{
+    display:flexbox;
+    flex-direction:column;
+    align-items:center;
+    justify-content: center;
+    top: 43px;
+    width: auto;
+    margin-top:10px; 
+    
+  }
+  #line, #number,#address{
+    visibility: hidden;
+  }
+  #box_experience{
+    display:flexbox;
+    flex-direction:column;
+    align-items:center;
+    justify-content: center;
+    top: 144px;
+    width: auto;
+    margin-bottom: 10px; 
+    
+  }
+  #ico{
+    bottom: 20px;
+    position:fixed;
+    float: right;
+  }
+  #ijambo{
+    width:auto;
+    height:auto;
+    bottom: 20px;
+    position:fixed;
+    float: left;
+  }
+}
 ul{
     list-style-type:  none;
 }
@@ -179,8 +234,8 @@ line-height: 38px;
   display: flex-box;
   flex-direction: column;
   float: right;
-  color: #fff;
-  
+  padding:8px;
+  border:solid black;
   
   font-family:'Intel';
   font-style: normal;
@@ -192,6 +247,19 @@ line-height: 38px;
 height: 281px;
 right: 214px;
 top: 414.4px;
+}
+#box_experience:hover{
+  color:red;
+  cursor:pointer;
+}
+#box_edu{
+  color: #fff;
+  padding:8px;
+  border:solid black;
+}
+#box_edu:hover{
+  color:red;
+  cursor: pointer;
 }
 
 
@@ -364,208 +432,4 @@ position:fixed;
 
 
 
-/* @media  only screen and (max-width:800px) {
-    .body{
-        width:100%;
-        height:100%;
-        margin:0;
-        width: 100%;
-    }
-    .navi,.dropdown{
-        display: flex;
-        width: 100%;
-        height: fit-content;
-    }
-}
-@media  only screen and (max-width:414px) {
-    .body{
-        width:100%;
-        height:100%;
-        margin:0;
-        width: 100%;
-    }
-    .navi,.dropdown{
-        display: flex;
-        width: 100%;
-        height: fit-content;
-    }
-}
-@media  only screen and (max-width:1024px) {
-    .body{
-        width:100%;
-        height:100%;
-        margin:0;
-        width: 100%;
-    }
-    .navi,.dropdown{
-        display: flex;
-        width: 100%;
-        height: fit-content;
-    }
-}
-ul{
-    list-style-type: none;
-}
-.ccc{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-}
-.a1{
-    position:  absolute;
-    width: 15px;
-    height: 15px;
-    left: 1442px;
-    top: 262px;
-}
-.a2{
-    position:  absolute;
-    width: 15px;
-    height: 15px;
-    left: 1442px;
-    top: 314px;
-}
-.a3{
-    position:  absolute;
-    width: 15px;
-    height: 15px;
-    left: 1442px;
-    top: 374px;
-}
-.a4{
-    position:  absolute;
-    width: 15px;
-    height: 15px;
-    left: 1442px;
-    top: 374px;
-}
-.a5{
-    position:  absolute;
-    width: 15px;
-    height: 15px;
-    left: 1442px;
-    top: 427px;
-}
-
-.a6{
-    position:  absolute;
-    width: 15px;
-    height: 15px;
-    left: 1442px;
-    top: 477px;
-}
-.listing{ */
-    /* 🦆 icon "hamburger menu" */
-
-/* position: absolute;
-width: 48.4px;
-height: 44px;
-left: 1414px;
-top: 43px;
-}
  
-.my{
-    
-position: absolute;
-width: 534px;
-height: 48px;
-left: 214px;
-top: 255.4px;
-
-font-family: 'Inter';
-font-style: normal;
-font-weight: 700;
-font-size: 40px;
-line-height: 48px;
-
-color: #FFFFFF;
-
-}
-.para{
-    
-position: absolute;
-width: 551px;
-height: 281px;
-left: 214px;
-top: 414.4px;
-
-font-family: 'Inter';
-font-style: normal;
-font-weight: 300;
-font-size: 40px;
-line-height: 48px;
-
-color: #FFFFFF;
-}
-#face{ */
-    /* 🦆 icon "facebook" */
- /* position: absolute;
- left: 1051px;
- top: 900px;
-  
-  }
-  #goog{ */
-   /* 🦆 icon "google" */
- /* position: absolute;
- left: 1207px;
- top: 900px;
- 
-  }
- #inst{ */
- /* 🦆 icon "instagram" */
- /* position: absolute;
- left: 1129px;
- top:  900px;
- }
-  #linked{
- position: absolute;
- left: 1355px;
- top:  900px;
- }
- #twi{ */
-     /* 🦆 icon "twitter" */
- /* position: absolute;
- left: 1269px;
- top:  900px;
- }
- .dropbtn {
-    background-color:#2F2F2F;
-   }  */
-   
-   /* The container <div> - needed to position the dropdown content */
-   /* .dropdown {
- 
-         position:  absolute;
-         
-        display: inline-block;
-   }
-    */
-   /* Dropdown Content (Hidden by Default) */
-   /* .dropdown-content {
-     display: none;
-     position: absolute;
-     background-color: black;
-     right:0px;
-     min-width: 360px;
-     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-     z-index: 1;
-   } */
-   
-   /* Links inside the dropdown */
-   /* .dropdown-content a {
-     color:white;
-     padding: 12px 16px;
-     text-decoration: none;
-     display: block;
-   }
-    */
-   /* Change color of dropdown links on hover */
-   /* .dropdown-content a:hover {background-color: #ddd;} */
-   
-   /* Show the dropdown menu on hover */
-   /* .dropdown:hover .dropdown-content {display: block;} */
-   
-   /* Change the background color of the dropdown button when the dropdown content is shown */
-   /* .dropdown:hover .dropbtn {background-color: #2F2F2F;}
-  */
