--- a/recent.css
+++ b/recent.css
@@ -2,102 +2,147 @@ html{
     width:100%;
     margin: 0;
     padding: 0;
+ }
+ ul{
+    list-style-type: none;
+ }
+ body{
+  background-color: #141617;
+ }
+#above{
+  font-family: 'Verdana, Geneva, Tahoma, sans-serif';
+  font-size: 45px;
+  font-weight: 400;
+
+  display: flex;
+  flex-direction: row;
+  float: left;
+  left: 114px;
+  top: 150px;
+  position:fixed;
+
 }
-body{
-    background-image: url("tomy-boy-.jpg");
-    background-repeat: no-repeat;
-    background-size: 1540px 982px;
+.para_right #ghtp{
+  font-family: 'Geneva';
+  font-size: 20px;
+  font-weight: 100;
+   
+  height: 30px;
+  color: #fff;
 }
-#number{
+#ghtp:hover{
+  color:#DA4C84;
+  cursor: pointer;
+}
+#nterp{
+  font-family: 'Geneva';
+  font-size: 20px;
+  font-weight: 100;
+   
+  height: 30px;
+  color: #fff;
+}
+#nterp:hover{
+  color:#DA4C84;
+  cursor: pointer;
+}
+#ftp{
+  font-family: 'Geneva';
+  font-size: 22px;
+  font-weight: 100;
+
+  height: 30px;
+  color: #fff;
+}
+ a:link { text-decoration: none; }
+ a:visited { text-decoration: none; }
+ a:hover { text-decoration: none; }
+ a:active { text-decoration: none; }
+#ftp:hover{
+  color:#DA4C84;
+  cursor: pointer;
+}
+
+
+.para_left{
+  display: flex;
+  flex-direction: column;
+  float: left;
+  text-align: left;
+  font-family:'Intel';
+  font-style: normal;
+
+  font-weight:normal;
+  line-height:15px;
+
+  color:#fff;
+  position: fixed;
+  width: 350px;
+  left: 114px;
+  top:  300px;
+}
+.para_center{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+ text-align: center;
+  float: center;
+
+  color: #fff;
+
+  font-family:'Intel';
+  font-style: normal;
+
+  font-weight:normal;
+  line-height: 15px;
+
+  color:#fff;
+  position: fixed;
+  width: 350px;
+  left: 450px;
+  padding-left: 20px;
+  padding-right: 20px;
+  top:  300px;
+
+}
+/* #above{
+  color:#DA4C84;
+  
+} */
+#ijambo{
+  position: absolute;
+  bottom: 50px;
+  padding-left: 20px;
+  
+}
+.para_right{
+  display: flex;
+  flex-direction: column;
+  float: right;
+
+  font-family:'Intel';
+  font-style: normal;
+  font-weight:normal;
+  line-height:15px;
+
+position: fixed;
+width: 350px;
+right: 114px;
+top:  300px;
+
+color: #fff;
+}
+.navi{
   position: sticky;
-  width: 250px;
-  height: 23px;
-  left: 325px;
-  top: 31px;
+  display: inline-flex;
+  flex-direction: row;
+  justify-content: space-between;
+  top: 0;
+  z-index: 1;
+  width: 100%;
+  color: #fff;
 }
-#line{
-  position:sticky;
-  width: 9px;
-        height: 30px;
-        left: 451px;
-        top: 31px;
-}
-#address{
-  display: normal;
-}
-@media only screen and( width:414px){
-  body{
-    width: 100%;
-    height: 982px;
-  }
-  #box_edu{
-    display:flexbox;
-    flex-direction:column;
-    align-items:center;
-    justify-content: center;
-    top: 43px;
-    width: auto;
-    margin-top:10px; 
-    
-  }
-  #line, #number,#address{
-    visibility: hidden;
-  }
-  #box_experience{
-    display:flexbox;
-    flex-direction:column;
-    align-items:center;
-    justify-content: center;
-    top: 144px;
-    width: auto;
-    margin-bottom: 10px; 
-    
-  }
-  #ico{
-    bottom: 20px;
-    position:fixed;
-    float: right;
-  }
-  #ijambo{
-    width:auto;
-    height:auto;
-    bottom: 20px;
-    position:fixed;
-    float: left;
-  }
-}
-ul{
-    list-style-type:  none;
-}
-.right{
-    display: flex;
-    flex-direction: column;
-    float: right;
-    padding-right: 3pc;
-     
-  }
-  .navi{
-    display: flex;
-    flex-direction: row;
-     justify-content: space-between; 
-    color:#fff;
-     
-    font-family: 'poppins';
-    font-size: 1em;
-    font-weight: bold;
-  } 
-  .left{
-    display: flex;
-    flex-direction: column;
-    float: left;
-    color: #ddd;
-    padding-left: 28px;
-  
-    font-family: 'poppins';
-    font-size: 1.8em;
-  
-  }
-  .rest{
+ .rest{
     display: flex;
     flex-direction: column;
     float: right;
@@ -115,6 +160,7 @@ ul{
     right: 0px;
     bottom:0px;
   }
+
    /* The container <div> - needed to position the dropdown content */
    .dropdown {
        display: flexbox;
@@ -207,71 +253,15 @@ ul{
     height: 15px;
     top: 477px;
     border-radius: 50%;
-    
   }
   
-.my{
-    
-font-family: 'Inter';
-font-style: normal;
-font-weight: 700;
-font-size: 40px;
-line-height: 48px;
-
-}
-
-.para{ 
-width: 551px;
-height: 281px;
-left: 214px;
-top: 414.4px;
-
-font-family: 'Inter';
-font-style: normal;
-font-weight: 100;
-font-size: 20px;
-line-height: 38px;
-
-}
-#box_experience{
-  display: flex-box;
-  flex-direction: column;
-  float: right;
-  padding:8px;
-  border:solid black;
-  
-  font-family:'Intel';
-  font-style: normal;
-  font-size:20px;
-  font-weight: 100;
-  line-height:38px;
-
-  width: 551px;
-height: 281px;
-right: 214px;
-top: 414.4px;
-}
-#box_experience:hover{
-  color:red;
-  cursor:pointer;
-}
-#box_edu{
-  color: #fff;
-  padding:8px;
-  border:solid black;
-}
-#box_edu:hover{
-  color:red;
-  cursor: pointer;
-}
-
-
-
 #face{ 
   /* 🦆 icon "facebook" */
  
 top: 900px;
-
+}
+#face:hover{
+  color:#DA4C84;
 }
 #goog{  
  /* 🦆 icon "google" */
@@ -280,16 +270,25 @@ top: 900px;
  bottom:  78px;
  right: 90px;
 }
+#goog:hover{
+  color:#DA4C84;
+}
 #inst{  
 /* 🦆 icon "instagram" */
 position:fixed;
  bottom:  78px;
  right: 115px;
 }
+#inst:hover{
+  color:#DA4C84;
+}
 #linked{
   position:fixed;
   bottom:  78px;
   right: 145px;
+}
+#linked:hover{
+  color:#DA4C84;
 }
 #twi{  
    /* 🦆 icon "twitter" */
@@ -298,141 +297,8 @@ position:fixed;
    bottom:  78px;
    right: 175px;
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
- 
+#twi:hover{
+  color:#DA4C84;
+  cursor:pointer;
+}
+  
