--- a/cont.css
+++ b/cont.css
@@ -42,24 +42,24 @@ ul{
   .a1 ,.a2, .a3,.a4,.a5{
     visibility: visible;
   }
-   .form{
+    .form{
    width: 100%;
    margin:0;
    padding:0;
      float:center;
     padding-left: 5pc;
     padding-right: 5pc;
-  }  
-  .form-control{
+  }   
+  /* .form-control{
   margin-bottom:  10px;
   padding-bottom: 10px;
   position: relative;
-  }
-  .form-control i{
+  } */
+  /* .form-control i{
     position: absolute;
     top:237px;
     right:210px;
-  }
+  } */
 
   .form-control.success i.fa-check-circle{
     color: #2ecc71;
@@ -70,12 +70,12 @@ ul{
     visibility: visible;
   }
   
-  .form-control small{
+  /* .form-control small{
     visibility: hidden;
     position: absolute;
     /* bottom: 0;
     left: 0; */
-  }
+  } */
   
   .form-control.erro small{
     color:#e74c3c;
@@ -121,7 +121,7 @@ ul{
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: -3;
   }
-}
+
 @media only screen and (max-width:800px) {
    /* For mobile ipads:  */
    body{
@@ -236,21 +236,6 @@ ul{
  .dropbtn{
   right: 0;
  }
-.msgbox{
-
-  display: flex;
-  flex-direction: row;
-  align-items: flex-start;
-   margin: 4px 4px 4px 4px;
-   padding-top: 16px;
-  text-align: start;   
-   width: 394px; 
-   height: 165px; 
-  left: 806px;
-  top: 445px; 
-  
-  background:  #232628; 
-  } 
   #con{
   
    width: 180px;
