some changes on existed files

--- a/coffee.css
+++ b/coffee.css
@@ -150,7 +150,7 @@ ul{
     
   }
   #hor1{
-    border:2px solid #DA4C84;
+    border:  solid #DA4C84;
   }
   #hor2{
     border:2px solid #DA4C84;
@@ -260,7 +260,10 @@ background: rgba(255,0,0,0.8);
   cursor: pointer;
 } 
 
-
+a:link { text-decoration: none; }
+ a:visited { text-decoration: none; }
+ a:hover { text-decoration: none; }
+ a:active { text-decoration: none; }
 .cofepara{
   font-family: 'sans-serif', serif;
   font-weight: 400;
