--- a/cont.css
+++ b/cont.css
@@ -27,11 +27,11 @@ ul{
     bottom: 0;
   }
   .left{
-      width: 100%;
+      width: 50%;
       margin:0;
   }
   .right{
-    width:75%;
+    width:20%;
     align-items: center;
   }
   #ijambo{
@@ -233,6 +233,10 @@ ul{
   padding-right: 3pc;
    
 }
+a:link { text-decoration: none; }
+ a:visited { text-decoration: none; }
+ a:hover { text-decoration: none; }
+ a:active { text-decoration: none; }
  .dropbtn{
   right: 0;
  }
