--- a/edu.css
+++ b/edu.css
@@ -158,6 +158,10 @@ ul{
     justify-content: space-between;
     align-items: center;
   }
+  a:link { text-decoration: none; }
+ a:visited { text-decoration: none; }
+ a:hover { text-decoration: none; }
+ a:active { text-decoration: none; }
   .a1{
     position:fixed;
      right:65px;
