--- a/skill.css
+++ b/skill.css
@@ -1,6 +1,14 @@
 *{
     box-sizing: border-box;
 }
+html{
+  width:100%;
+  margin: 0;
+  padding: 0;
+}
+body{
+width: 100%;
+}
 @media  only screen and (max-width:414px) {
     .body{
         width:100%;
@@ -74,6 +82,22 @@ body{
 ul{
     list-style-type:none;
 }
+
+.navi{
+  position: sticky;
+  display: inline-flex;
+  flex-direction: row;
+  justify-content: space-between;
+  top: 0;
+  z-index: 1;
+  width: 100%;
+  color: #fff;
+}
+
+a:link { text-decoration: none; }
+ a:visited { text-decoration: none; }
+ a:hover { text-decoration: none; }
+ a:active { text-decoration: none; }
 .ccc{
   display: flex;
   flex-direction: row;
@@ -96,99 +120,14 @@ font-size: 40px;
 line-height: 48px;
 
 }
-.a1{
-    position:  absolute;
-    width: 15px;
-    height: 15px;
-    left: 1442px;
-    top: 262px;
-}
-.a2{
-    position:  absolute;
-    width: 15px;
-    height: 15px;
-    left: 1442px;
-    top: 314px;
-}
-.a3{
-    position:  absolute;
-    width: 15px;
-    height: 15px;
-    left: 1442px;
-    top: 374px;
-}
-.a4{
-    position:  absolute;
-    width: 15px;
-    height: 15px;
-    left: 1442px;
-    top: 374px;
-}
-.a5{
-    position:  absolute;
-    width: 15px;
-    height: 15px;
-    left: 1442px;
-    top: 427px;
-}
-
-.a6{
-    position:  absolute;
-    width: 15px;
-    height: 15px;
-    left: 1442px;
-    top: 477px;
-}
-.listing{
-    /* 🦆 icon "hamburger menu" */
-
-position: absolute;
-width: 48.4px;
-height: 44px;
-left: 1414px;
-top: 43px;
-}
-#face{
-    /* 🦆 icon "facebook" */
- position: absolute;
- left: 1051px;
- top: 900px;
-  
-  }
-  #goog{
-   /* 🦆 icon "google" */
- position: absolute;
- left: 1207px;
- top:  900px;
  
-  }
- #inst{
- /* 🦆 icon "instagram" */
- position: absolute;
- left: 1129px;
- top:  900px;
- }
-  #linked{
- position: absolute;
- left: 1355px;
- top:  900px;
- }
- #twi{
-     /* 🦆 icon "twitter" */
- position: absolute;
- left: 1269px;
- top:  900px;
- }
  .web{ 
 
 position: absolute;
 width: 165.61px;
 height: 109.99px;
-left:  135.33px;
-top: 299.99px;
-
- 
-
+left:  200px;
+top: 260.44px;
  }
  .pro{
 /* 🦆 icon "code" */
@@ -196,8 +135,8 @@ top: 299.99px;
 position: absolute;
 width: 106.01px;
 height: 80.24px;
-left: 618.98px;
-top: 298.02px;
+left: 580.98px;
+top: 260.44px;
 
  }
  .mobile{
@@ -207,19 +146,141 @@ position: absolute;
 width: 46.09px;
 height: 96.03px;
 left: 1033.98px;
-top: 303.44px;
+top: 250.44px;
 
  }
- .dropbtn {
-    background-color:#2F2F2F;
-   } 
-   
+  #web{
+  
+    font-family: 'Geneva';
+  font-size: 20px;
+  font-weight: 100;
+ 
+  position:fixed;
+  left: 200px;
+  top:300px;
+  height: 30px;
+  color:#DA4C84;
+  }
+  #web_para{
+     
+    display: flex;
+    flex-direction: column;
+    float: left;
+    text-align: left;
+    font-family:'Intel';
+    font-style: normal;
+  
+    font-weight:normal;
+    line-height:15px;
+  
+    color:#fff;
+    position: fixed;
+    width: 350px;
+    left: 114px;
+    top:  350px;
+     
+  }
+  #pro{
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+
+    
+      font-family: 'Geneva';
+      font-size: 20px;
+      font-weight: 100;
+
+      position:fixed;
+      left: 540px;
+      top:  300px; 
+      height: 30px;
+      color:#DA4C84;
+
+  }
+  #pro_para{
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+   text-align: center;
+    float: center;
+  
+    color: #fff;
+  
+    font-family:'Intel';
+    font-style: normal;
+  
+    font-weight:normal;
+    line-height: 15px;
+  
+    color:#fff;
+    position: fixed;
+    width: 350px;
+    left: 450px;
+    padding-left: 20px;
+    padding-right: 20px;
+    top:  350px;
+  
+     
+  }
+  #mobile{
+    display: flex;
+    flex-direction: column;
+    text-align: right;
+    font-family: 'Geneva';
+    font-size: 22px;
+    font-weight: 100;
+
+    position:fixed;
+    right: 214px;
+    top:  300px;
+    height: 30px;
+    color:#DA4C84;
+  }
+  #mobile_para{
+
+    display: flex;
+    flex-direction: column;
+    float: right;
+  
+    font-family:'Intel';
+    font-style: normal;
+    font-weight:normal;
+    line-height:15px;
+  
+  position: fixed;
+  width: 350px;
+  right: 114px;
+  top:  350px;
+  
+  color: #fff;
+  }
+  .rest{
+    display: flex;
+    flex-direction: column;
+    float: right;
+    cursor: pointer;
+    padding-right: 2pc;
+    padding-top: 2pc;
+  }
+  #ico{
+    display:inline-flex;
+    float: right;
+    position: fixed;
+    margin: 2px;
+    padding: 4pc;
+    padding-right: 4pc;
+    right: 0px;
+    bottom:0px;
+  }
+
    /* The container <div> - needed to position the dropdown content */
    .dropdown {
- 
-         position:  absolute;
-         
-        display: inline-block;
+       display: flexbox;
+       display: flex;
+       float: right;
+  
+         /* position:  absolute; */
    }
    
    /* Dropdown Content (Hidden by Default) */
@@ -249,4 +310,109 @@ top: 303.44px;
    
    /* Change the background color of the dropdown button when the dropdown content is shown */
    .dropdown:hover .dropbtn {background-color: #2F2F2F;}
+  
+   .ccc{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+  }
+  .a1{
+    position:fixed;
+     right:65px;
+    width: 15px;
+    height: 15px;
+    top: 262px;
+    border-radius: 50%;
+
+  }  
+  .a2{
+    position:fixed;
+     right:65px;
+    width: 15px;
+    height: 15px;
+    top: 314px;
+    border-radius: 50%;
+  }
+  .a3{
+    position:fixed;
+    right:65px;
+    width: 15px;
+    height: 15px;
+    top: 374px;
+    border-radius: 50%;
+  }
+  .a4{
+     position:fixed;
+     right:65px;
+    width: 15px;
+    height: 15px;
+    top: 374px;
+    border-radius: 50%;
+  }
+  .a5{
+    position:fixed;
+     right:65px;  
+    width: 15px;
+    height: 15px;
+    top: 427px;
+    border-radius: 50%;
+  }
+  
+  .a6{
+    position:fixed;
+    right:65px;
+    width: 15px;
+    height: 15px;
+    top: 477px;
+    border-radius: 50%;
+  }
+  
+#face{ 
+  /* 🦆 icon "facebook" */
  
+top: 900px;
+}
+#face:hover{
+  color:#DA4C84;
+}
+#goog{  
+ /* 🦆 icon "google" */
+ 
+ position:fixed;
+ bottom:  78px;
+ right: 90px;
+}
+#goog:hover{
+  color:#DA4C84;
+}
+#inst{  
+/* 🦆 icon "instagram" */
+position:fixed;
+ bottom:  78px;
+ right: 115px;
+}
+#inst:hover{
+  color:#DA4C84;
+}
+#linked{
+  position:fixed;
+  bottom:  78px;
+  right: 145px;
+}
+#linked:hover{
+  color:#DA4C84;
+}
+#twi{  
+   /* 🦆 icon "twitter" */
+ 
+   position:fixed;
+   bottom:  78px;
+   right: 175px;
+}
+#twi:hover{
+  color:#DA4C84;
+  cursor:pointer;
+}
+  
+  
