--- a/styles.css
+++ b/styles.css
@@ -12,6 +12,10 @@ ul{
     list-style-type: none;
   
 }
+a:link { text-decoration: none; }
+ a:visited { text-decoration: none; }
+ a:hover { text-decoration: none; }
+ a:active { text-decoration: none; }
 @media only screen and(width:414px) {
   body{
      
