--- a/coffee.css
+++ b/coffee.css
@@ -1,3 +1,4 @@
+
 html{
     width:100%;
     margin: 0;
@@ -345,7 +346,7 @@ a:link { text-decoration: none; }
     background:  #232628;
      margin: 0 4px 4px 4px;
   }
-#send{
+.send{
     width: 120px;
     height: 40px;
     position:initial;
