--- a/coffee.css
+++ b/coffee.css
@@ -1,4 +1,53 @@
+@media screen and(width<= 414px) {
+   body{
+    width: 50%;
+   }
+   .right{
+    width: 30%;
+    justify-content: center;
+    top: 10px;
+    position: absolute;
+   }
+   img{
+    width: 100%;
+   }
+   .left{
 
+    position: absolute;
+    width: 30%;
+    justify-content: center;
+    top: 300px;
+   }
+   #number{
+    visibility: collapse;
+   }
+   #line{
+    visibility: collapse;
+   }
+   #address{
+    visibility: collapse;
+   }
+}
+@media screen and(width <= 1024px) {
+  body{
+   width: 100%;
+  }
+  .right{
+   width: 50%;
+   float: right; 
+   position: absolute;
+  }
+  img{
+   width: 100%;
+  }
+  .left{
+
+   position: absolute;
+   width: 50%;
+  float: left;
+  }
+   
+}
 html{
     width:100%;
     margin: 0;
@@ -8,6 +57,26 @@ html{
     width: 100%;
     background-color: #141617;
  }
+  
+   body::-webkit-scrollbar-track
+  {
+  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+  background-color: rgb(19, 16, 16);
+  }
+   body::-webkit-scrollbar
+  {
+  width: 6px;
+  /* background-color: #F5F5F5; */
+  } 
+  body::-webkit-scrollbar-thumb
+  {
+  background-color: #DA4C84;
+  }
+  body::-webkit-scrollbar-thumb:hover
+  {
+  background-color: rgba(82, 74, 74, 0.816);
+  }
+ 
 ul{
     list-style-type:  none;   
 }
@@ -187,39 +256,7 @@ ul{
      bottom:  78px;
      right: 175px;
   }
-  /* .flexcroll{ width:400px;
-    height:200px;
-    overflow:scroll;
-   }
-.flexcroll{
-scrollbar-face-color: #367CD2;
-scrollbar-shadow-color: #FFFFFF;
-scrollbar-highlight-color: #FFFFFF;
-scrollbar-3dlight-color: #FFFFFF;
-scrollbar-darkshadow-color: #FFFFFF;
-scrollbar-track-color: #FFFFFF;
-scrollbar-arrow-color: #FFFFFF;
-} */
-
-/* Let's get this party started */
-/* .flexcroll::-webkit-scrollbar {
-width: 12px;
-} */
-
-/* Track */
-/* .flexcroll::-webkit-scrollbar-track {
--webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3); 
--webkit-border-radius: 10px;
-border-radius: 10px;
-} */
-
-/* Handle */
-/* .flexcroll::-webkit-scrollbar-thumb {
--webkit-border-radius: 10px;
-border-radius: 10px;
-background: rgba(255,0,0,0.8); 
--webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5); 
-} */
+   
 
 .left{
   display: flex;
@@ -247,14 +284,6 @@ background: rgba(255,0,0,0.8);
   
   color: #FFF;
 }
- 
-
-/* .search input[type=text] {
-  padding: 6px;
-  margin-top: 8px;
-  font-size: 17px;
-  border: none;
-} */
  
   .button:hover {
   background: #ccc;
@@ -356,4 +385,18 @@ a:link { text-decoration: none; }
     background:  #A91957;
     cursor: pointer;
   }
-  
+  #number{
+    top: 24px;
+    position: fixed;
+     left: 430px;
+  }
+  #line{
+    top: 24px;
+    position: fixed;
+     left: 570px;
+  }
+  #address{
+    top: 24px;
+    position: fixed;
+     left: 580px;
+  }
