--- a/edu.css
+++ b/edu.css
@@ -26,31 +26,39 @@ body{
   display: normal;
 }
 @media only screen and( width:414px){
-  body{
-    width: 100%;
-    height: 982px;
-  }
+   body{ 
+     width: 100%;
+    height: 982px;  
+   }  
   #box_edu{
-    display:flexbox;
-    flex-direction:column;
+    /* display:flexbox;
+    flex-direction:column; */
     align-items:center;
     justify-content: center;
     top: 43px;
-    width: auto;
+    width: 45%;
     margin-top:10px; 
     
   }
-  #line, #number,#address{
-    visibility: hidden;
-  }
+  #number{
+    visibility: collapse;
+   }
+   #line{
+    visibility: collapse;
+   }
+   #address{
+    visibility: collapse;
+   }
   #box_experience{
-    display:flexbox;
-    flex-direction:column;
+    /* display:flex;
+    flex-direction:column; */
     align-items:center;
     justify-content: center;
+
+    position: absolute;
     top: 144px;
-    width: auto;
-    margin-bottom: 10px; 
+    width: 45%;
+    padding: 8px 8px 3px; 
     
   }
   #ico{
@@ -250,6 +258,7 @@ line-height: 38px;
   font-weight: 100;
   line-height:38px;
 
+  color: #fff;
   width: 551px;
 height: 281px;
 right: 214px;
@@ -302,9 +311,22 @@ position:fixed;
    bottom:  78px;
    right: 175px;
 }
-
-
-
+ 
+#number{
+  top: 24px;
+  position: fixed;
+   left: 430px;
+}
+#line{
+  top: 24px;
+  position: fixed;
+   left: 570px;
+}
+#address{
+  top: 24px;
+  position: fixed;
+   left: 580px;
+}
 
 
 
