--- a/styles.css
+++ b/styles.css
@@ -23,6 +23,15 @@ a:link { text-decoration: none; }
       margin: 0;
       padding: 0;
   }
+  #number{
+    visibility: collapse;
+   }
+   #line{
+    visibility: collapse;
+   }
+   #address{
+    visibility: collapse;
+   }
   #ico{
     position: absolute;
     padding: 2px 2px 2px 2px;
@@ -54,9 +63,7 @@ a:link { text-decoration: none; }
     top:0;
     padding-left: 2px;
   }
-  #oo{
-    visibility: collapse;
-  }
+ 
   .listing{
     position: fixed;
     top:8px;
@@ -100,8 +107,6 @@ body{
     flex-direction: column;
     float: right;
     color: #ddd;
-    /* font-family: 'poppins';
-    font-size: 1.8em; */
   } 
   #img{
     position: fixed;
@@ -163,82 +168,6 @@ body{
      box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
      z-index: 1;
    }
-    
-   /* Links inside the dropdown */
-   .dropdown-content a {
-     color:white;
-     padding: 12px 16px;
-     text-decoration: none;
-     display: block;
-   }  
-   
-   /* Change color of dropdown links on hover */
-     .dropdown-content a:hover {background-color: #ddd;}  
-   
-   /* Show the dropdown menu on hover */
-     .dropdown:hover .dropdown-content {display: block;}
-     
-   /* Change the background color of the dropdown button when the dropdown content is shown */
-     .dropdown:hover .dropbtn {background-color: #2F2F2F;}  
-  
-    .ccc{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-  }
-  .a1{
-    width: 15px;
-    height: 15px;
-    left: 1442px;
-    top: 262px;
-    border-radius: 50%;
-    background-color: #9C2051;
-  }  
-  .a2{
-    
-    width: 15px;
-    height: 15px;
-    left: 1442px;
-    top: 314px;
-    border-radius: 50%;
-    
-  }
-  .a3{
-     
-    width: 15px;
-    height: 15px;
-    left: 1442px;
-    top: 374px;
-    border-radius: 50%;
-  
-  }
-  .a4{
-     
-    width: 15px;
-    height: 15px;
-    left: 1442px;
-    top: 374px;
-    border-radius: 50%;
-   
-  }
-  .a5{  
-    width: 15px;
-    height: 15px;
-    left: 1442px;
-    top: 427px;
-    border-radius: 50%;
-     
-  }
-  
-  .a6{
-     
-    width: 15px;
-    height: 15px;
-    left: 1442px;
-    top: 477px;
-    border-radius: 50%;
-  }
   #ijambo{
     display: flex;
      font-family: 'poppins';
@@ -247,13 +176,8 @@ body{
     text-align: left;
     position:  fixed;
     padding: 2pc;
-    bottom: 0px;
+    bottom: 58px;
   }  
-
-.listing{
-    position: fixed;
-    right: 50px;
-}
 .ashimwe{
   font-family: 'Intel';
   font-size: 2em;
@@ -267,338 +191,217 @@ body{
  font-family: 'Intel';
  font-size:1.5em;
  font-weight: 500;
-}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-/* }
-
-@media  only screen and (max-width:414px) {
-    body{
-        background-color:#190e0e;
-        width: 100%;
-    }
-    .right {
-        width: 50%;
-
-    }
-    .left{
-        float: left;
-        width: 50%;
-    }
-    .navi,.dropdown {
-        display: flex;
-        width: 30%;
-        height: fit-content;
-    }
-}
-@media  only screen and (max-width:800px) {
-    body{
-        
-        width: 100%;
-    }
-    .right {
-        width: 50%;
-
-    }
-    .left{
-        float: left;
-        width: 50%;
-    }
-    .navi,.dropdown {
-        display: flex;
-        width: 30%;
-        height: fit-content;
-    } 
-} */
-
-/* .ashimwe{ */
-    /* Group 3 */
-/* position: absolute;
-width: 525px;
-height: 154px;
-left: 34px;
-top: 240px; */
-/* ASHIMWE, I’m NTWARI FIACRE */
-
-/* position: absolute;
-width: 525px;
-height: 154px;
-left: 34px;
-top: 240px;
-
-font-family: 'Inter';
-font-style: normal;
-font-weight: 800;
-font-size: 64px;
-line-height: 77px;
-
-color: #C32865;
-
-
-} */
-/* .ccc{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-}
-.fifi{ */
-    /* fiacre & ntwari*/
-/* position: absolute;
-width: 525px;
-height: 154px;
-left: auto;
-top: 340px;
-
-font-family: 'Inter';
-font-style: normal;
-font-weight: 800;
-font-size: 64px;
-line-height: 77px;
+ 
+ display: flex;
+ left:200px;
+ top: 270px;
+ position: fixed;
 }
 .vid{
 
-position: absolute;
-width: 46.31px;
-height: 53px;
-left: 250px;
-top: 710px;
-}
-#watch{ */
-    /* watch Resume */
-/* 
-position: absolute;
-width: 233px;
-height: 39px;
-left: 392px;
-top: 730px;
-
-font-family: 'Inter';
-font-style: normal;
-font-weight: 800;
-font-size: 32px;
-line-height: 39px; */
-/* identical to box height */
-/* 
-color: #FFFFFF;
-
-
-}
-.a1{
-    position:  absolute;
-    width: 15px;
-    height: 15px;
-    left: 1442px;
-    top: 262px;
-}
-.a2{
-    position:  absolute;
-    width: 15px;
-    height: 15px;
-    left: 1442px;
-    top: 314px;
-}
-.a3{
-    position:  absolute;
-    width: 15px;
-    height: 15px;
-    left: 1442px;
-    top: 374px;
-}
-.a4{
-    position:  absolute;
-    width: 15px;
-    height: 15px;
-    left: 1442px;
-    top: 374px;
-}
-.a5{
-    position:  absolute;
-    width: 15px;
-    height: 15px;
-    left: 1442px;
-    top: 427px;
-}
-.a6{
-    position:  absolute;
-    width: 15px;
-    height: 15px;
-    left: 1442px;
-    top: 477px;
-}
-.listing{ */
-    /* 🦆 icon "hamburger menu" */
-
-/* position: absolute;
-width: 48.4px;
-height: 44px;
-left: 1414px;
-top: 43px;
-
-} 
- #face{ */
-   /* 🦆 icon "facebook" */
-/* position: absolute;
-left: 1051px;
-top:  900px;
- 
- }
- #goog{ */
-  /* 🦆 icon "google" */
-/* position: absolute;
-left: 1207px;
-top:  900px;
-
- }
-#inst{ */
-/* 🦆 icon "instagram" */
-/* position: absolute;
-left: 1129px;
-top:  900px;
-}
- #linked{
-position: absolute;
-left: 1355px;
-top:  900px;
-}
-#twi{ */
-    /* 🦆 icon "twitter" */
-/* position: absolute;
-left: 1269px;
-top:  900px;
-}
-img
-{
-position: absolute;
-width: 597px;
-height: 1002px;
-left: 821px;
-top: -10px;
-
+ display: flex;
+ left:120px;
+ top: 280px;
+ position: fixed;
 }
 .line{ 
-position: absolute;
-width: 200.5px;
-height: 0px;
-left: 0px;
-top: 772px;
-border: 6px solid #FFf;
+
+  display: flex;
+  position: absolute;
+  width: 50px;
+  height: 0px;
+  left: 0px;
+  top: 215px;
+  border: 1px solid #FFf;
+  }
+.dropdown {
+  display: flexbox;
+  display: flex;
+  float: right;
+
+    /* position:  absolute; */
 }
-.dropbtn {
-    background-color:#2F2F2F;
-   }  */
-   
-   /* The container <div> - needed to position the dropdown content */
-   /* .dropdown {
+
+/* Dropdown Content (Hidden by Default) */
+.dropdown-content {
+display: none;
+position: absolute;
+background-color: #141617;
+right:0px;
+overflow: hidden;
+min-width: 360px;
+min-height: 100vh;
+box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+z-index: 1;
+}
+
+/* Links inside the dropdown */
+.dropdown-content a {
+color:white;
+padding: 12px 16px;
+text-decoration: none;
+display: block;
+}
+
+/* Change color of dropdown links on hover */
+.dropdown-content a:hover {background-color: #ddd;}
+
+/* Show the dropdown menu on hover */
+.dropdown:hover .dropdown-content {display: block;}
+
+/* Change the background color of the dropdown button when the dropdown content is shown */
+.dropdown:hover .dropbtn {background-color: #2F2F2F;}
+
+.ccc{
+display: flex;
+flex-direction: row;
+justify-content: space-between;
+align-items: center;
+padding-left: 20px;
+top: 400px;
+position: fixed;
+}
+#ntwari{
+top:450px;
+padding-left: 30px;
+position: fixed;
+}
  
-         position:  absolute;
-         
-        display: inline-block;
-   }
-    */
-   /* Dropdown Content (Hidden by Default) */
-   /* .dropdown-content {
-     display: none;
-     position: absolute;
-     background-color: black;
-     right:0px;
-     min-width: 360px;
-     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-     z-index: 1;
-   } */
-   
-   /* Links inside the dropdown */
-   /* .dropdown-content a {
-     color:white;
-     padding: 12px 16px;
-     text-decoration: none;
-     display: block;
-   } */
-   
-   /* Change color of dropdown links on hover */
-   /* .dropdown-content a:hover {background-color: #ddd;} */
-   
-   /* Show the dropdown menu on hover */
-   /* .dropdown:hover .dropdown-content {display: block;}
-    */
-   /* Change the background color of the dropdown button when the dropdown content is shown */
-   /* .dropdown:hover .dropbtn {background-color: #2F2F2F;} */
- 
+.a1{
+  position:fixed;
+   right:65px;
+  width: 15px;
+  height: 15px;
+  top: 262px;
+  border-radius: 50%;
+
+}  
+.a2{
+  position:fixed;
+   right:65px;
+  width: 15px;
+  height: 15px;
+  top: 314px;
+  border-radius: 50%;
+}
+.a3{
+  position:fixed;
+  right:65px;
+  width: 15px;
+  height: 15px;
+  top: 374px;
+  border-radius: 50%;
+}
+.a4{
+   position:fixed;
+   right:65px;
+  width: 15px;
+  height: 15px;
+  top: 374px;
+  border-radius: 50%;
+}
+.a5{
+  position:fixed;
+   right:65px;  
+  width: 15px;
+  height: 15px;
+  top: 427px;
+  border-radius: 50%;
+}
+
+.a6{
+  position:fixed;
+  right:65px;
+  width: 15px;
+  height: 15px;
+  top: 477px;
+  border-radius: 50%;
+}
+#face{ 
+/* 🦆 icon "facebook" */
+bottom: 78px;
+right: 205px;
+position: fixed;
+}
+#face:hover{
+color:#DA4C84;
+}
+#goog{  
+/* 🦆 icon "google" */
+
+position:fixed;
+bottom:  78px;
+right: 90px;
+}
+#goog:hover{
+color:#DA4C84;
+}
+#inst{  
+/* 🦆 icon "instagram" */
+position:fixed;
+bottom:  78px;
+right: 115px;
+}
+#inst:hover{
+color:#DA4C84;
+}
+#linked{
+position:fixed;
+bottom:  78px;
+right: 145px;
+}
+#linked:hover{
+color:#DA4C84;
+}
+#twi{  
+/* 🦆 icon "twitter" */
+
+position:fixed;
+bottom:  78px;
+right: 175px;
+}
+#twi:hover{
+color:#DA4C84;
+cursor:pointer;
+}
+.scroller{
+ box-sizing: content-box;
+ border: solid #141617;
+ width: 220px;
+ height: 100px;
+ padding-bottom: 8px;
+ overflow-x: scroll;
+
+ padding-left: 20px;
+ top: 100px;
+ position: fixed;
+}
+.scroller::-webkit-scrollbar-track
+{
+-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+background-color: lightgray;
+}
+.scroller::-webkit-scrollbar
+{
+width: 6px;
+background-color: #F5F5F5;
+} 
+.scroller::-webkit-scrollbar-thumb
+{
+background-color: purple;
+}
+#number{
+  top: 24px;
+  position: fixed;
+   left: 430px;
+}
+#line{
+  top: 24px;
+  position: fixed;
+   left: 570px;
+}
+#address{
+  top: 24px;
+  position: fixed;
+   left: 580px;
+}
