--- a/bloo.css
+++ b/bloo.css
@@ -1,3 +1,4 @@
+ @import url('https://fonts.googleapis.com/css2?family=Inter&display=swap'); 
 @media screen and(width<= 414px) {
     body{
      width: 50%;
@@ -58,6 +59,17 @@
      background-color: #141617;
   }
    
+  .reveal {
+    position: relative;
+    transform: translateY(150px);
+    opacity: 0;
+    transition: 2s all ease;
+  }
+  
+  .reveal.active {
+    transform: translateY(0);
+    opacity: 1;
+  }
     body::-webkit-scrollbar-track
    {
    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
@@ -125,100 +137,112 @@
      right: 0px;
      bottom:0px;
    }
-    /* The container <div> - needed to position the dropdown content */
-    .dropdown {
-        display: flexbox;
-        display: flex;
-        float: right;
-   
-          /* position:  absolute; */
-    }
-    
-    /* Dropdown Content (Hidden by Default) */
-    .dropdown-content {
-      display: none;
-      position: absolute;
-      background-color: black;
-      right:0px;
-      min-width: 360px;
-      box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-      z-index: 1;
-    }
-    
-    /* Links inside the dropdown */
-    .dropdown-content a {
-      color:white;
-      padding: 12px 16px;
-      text-decoration: none;
-      display: block;
-    }
-    
-    /* Change color of dropdown links on hover */
-    .dropdown-content a:hover {background-color: #ddd;}
-    
-    /* Show the dropdown menu on hover */
-    .dropdown:hover .dropdown-content {display: block;}
-    
-    /* Change the background color of the dropdown button when the dropdown content is shown */
-    .dropdown:hover .dropbtn {background-color: #2F2F2F;}
-   
-    .ccc{
-     display: flex;
-     flex-direction: row;
-     justify-content: space-between;
-     align-items: center;
-   }
+   .dropdown {
+    display: flexbox;
+    display: flex;
+    float: right;
+
+      /* position:  absolute; */
+}
+
+/* Dropdown Content (Hidden by Default) */
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #141617;
+  right:0px;
+  overflow: hidden;
+  min-width: 360px;
+  min-height: 100vh;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+/* Links inside the dropdown */
+.dropdown-content a {
+  color:white;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+/* Change color of dropdown links on hover */
+.dropdown-content a:hover {background-color: #ddd;}
+
+/* Show the dropdown menu on hover */
+.dropdown:hover .dropdown-content {display: block;}
+
+/* Change the background color of the dropdown button when the dropdown content is shown */
+.dropdown:hover .dropbtn {background-color: #2F2F2F;}
+
+.ccc{
+ display: flex;
+ flex-direction: row;
+ justify-content: space-between;
+ align-items: center;
+ padding-left: 20px;
+ top: 400px;
+ position: fixed;
+}
+#ntwari{
+ top:450px;
+ padding-left: 30px;
+ position: fixed;
+}
+
    .a1{
-     position:fixed;
-      right:65px;
-     width: 15px;
-     height: 15px;
-     top: 262px;
-     border-radius: 50%;
- 
-   }  
-   .a2{
-     position:fixed;
-      right:65px;
-     width: 15px;
-     height: 15px;
-     top: 314px;
-     border-radius: 50%;
-   }
-   .a3{
+    position:fixed;
+     right:65px;
+    width: 15px;
+    height: 15px;
+    top: 162px;
+    border-radius: 50%;
+
+  }  
+  .a2{
+    position:fixed;
+     right:65px;
+    width: 15px;
+    height: 15px;
+    top: 202px;
+    border-radius: 50%;
+  }
+  .a3{
+    position:fixed;
+    right:65px;
+    width: 15px;
+    height: 15px;
+    top: 242px;
+    border-radius: 50%;
+  }
+  .a4{
      position:fixed;
      right:65px;
-     width: 15px;
-     height: 15px;
-     top: 374px;
-     border-radius: 50%;
-   }
-   .a4{
-      position:fixed;
-      right:65px;
-     width: 15px;
-     height: 15px;
-     top: 374px;
-     border-radius: 50%;
-   }
-   .a5{
-     position:fixed;
-      right:65px;  
-     width: 15px;
-     height: 15px;
-     top: 427px;
-     border-radius: 50%;
-   }
-   
-   .a6{
-     position:fixed;
-     right:65px;
-     width: 15px;
-     height: 15px;
-     top: 477px;
-     border-radius: 50%;
-     
-   }
+    width: 15px;
+    height: 15px;
+    top: 283px;
+    border-radius: 50%;
+  }
+  .a5{
+    position:fixed;
+     right:65px;  
+    width: 15px;
+    height: 15px;
+    top:  322px;
+    border-radius: 50%;
+  }
+  
+  .a6{
+    position:fixed;
+    right:65px;
+    width: 15px;
+    height: 15px;
+    top:   362px;
+    border-radius: 50%;
+  }
+  .a1,.a2, .a3, .a4, .a5, .a6{
+    background-color: #181A1B;
+  }
    
    #face{ 
      /* 🦆 icon "facebook" */
@@ -266,7 +290,40 @@
    padding-left: 12px;
    padding-right: 12px;
    padding-bottom: 104px;
+
+   width: 500px;
+   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+   font-size: 20px;
+   color: #ccc;
  }
+ .right{
+  display: flex;
+  flex-direction: column;
+  float: right;
+  
+  position:absolute;
+  top: 340px;
+  right: 41px;
+  padding-left: 12px;
+  
+  color: #FFF;
+}
+#button{
+  background-color:#232628;
+  color: #ccc;
+  height: 35px;
+  width: 30px;
+}
+#search{
+  background-color: #232628;
+  height: 30px;
+  width: 250px;
+}
+.button:hover {
+  background: #ccc;
+  cursor: pointer;
+} 
+
  .center{
     display: flex;
     float:left;
@@ -275,11 +332,16 @@
     
     
     position: absolute;
-    top: 750px;
+    top: 830px;
     left: 160px;
     padding-left: 12px;
     padding-right: 12px;
     padding-bottom: 104px;
+
+    width: 500px;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: 20px;
+    color: #ccc;
   }
   .footer{
     display: flex;
@@ -289,13 +351,75 @@
     
     
     position: absolute;
-    top: 1200px;
+    top: 1500px;
     left: 160px;
     padding-left: 12px;
     padding-right: 12px;
     padding-bottom: 104px;
+
+    width: 500px;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: 20px;
+    color: #ccc;
   }
-   
+   #calc{
+    display: flex;
+    float:left;
+    flex-direction: column;
+    width: 50%;
+    color: #ccc;
+    
+    position: absolute;
+    top: 2280px;
+    left: 160px;
+    padding: 24px 12px 104px;
+     
+   }
+   #calc img{
+    width: 450px;
+    height: 450pxpx;
+   }
+   #calc p{
+    width: 500px;
+    font-family: 'Courier New', Courier, monospace;
+    font-size: 20px;
+    color: #ccc;
+   }
+   #todolist{
+    display: flex;
+    float:left;
+    flex-direction: column;
+    width: 50%;
+    color: #ccc;
+    
+    position: absolute;
+    top: 2980px;
+    left: 160px;
+    padding: 24px 12px 104px;
+     
+   }
+   #todolist img{
+    width: 400px;
+    height: 300pxpx;
+   }
+   #todolist p{
+    width: 500px;
+    font-family: 'Times New Roman', Times, serif;
+    font-size: 20px;
+    color: #ccc;
+   }
+   #wrk{
+    font-family: 'poppins';
+    font-size:25px;
+    font-weight:300;
+    color:#fff;
+
+    position: absolute;
+    width: 200px;
+    height: 60px;
+    left: 160px;
+    top: 2200px;
+   }
  button{
    background-color:  #DA4C84;
    color:#FFF;
@@ -330,9 +454,7 @@
    font-size:25px;
  
    color:#fff;
- 
  }
- 
    #number{
      top: 24px;
      position: fixed;
