--- a/recent.css
+++ b/recent.css
@@ -227,55 +227,77 @@ color: #fff;
     bottom:0px;
   }
 
-   /* The container <div> - needed to position the dropdown content */
-   .dropdown {
-       display: flexbox;
-       display: flex;
-       float: right;
-  
-         /* position:  absolute; */
-   }
-   
-   /* Dropdown Content (Hidden by Default) */
-   .dropdown-content {
-     display: none;
-     position: absolute;
-     background-color: black;
-     right:0px;
-     min-width: 360px;
-     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-     z-index: 1;
-   }
-   
-   /* Links inside the dropdown */
-   .dropdown-content a {
-     color:white;
-     padding: 12px 16px;
-     text-decoration: none;
-     display: block;
-   }
-   
-   /* Change color of dropdown links on hover */
-   .dropdown-content a:hover {background-color: #ddd;}
-   
-   /* Show the dropdown menu on hover */
-   .dropdown:hover .dropdown-content {display: block;}
-   
-   /* Change the background color of the dropdown button when the dropdown content is shown */
-   .dropdown:hover .dropbtn {background-color: #2F2F2F;}
-  
-   .ccc{
+  .dropdown {
+    display: flexbox;
     display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
+    float: right;
+
+      /* position:  absolute; */
+}
+
+/* Dropdown Content (Hidden by Default) */
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #141617;
+  right:0px;
+  overflow: hidden;
+  min-width: 360px;
+  min-height: 100vh;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+/* Links inside the dropdown */
+.dropdown-content a {
+  color:white;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+/* Change color of dropdown links on hover */
+.dropdown-content a:hover {background-color: #ddd;}
+
+/* Show the dropdown menu on hover */
+.dropdown:hover .dropdown-content {display: block;}
+
+/* Change the background color of the dropdown button when the dropdown content is shown */
+.dropdown:hover .dropbtn {background-color: #2F2F2F;}
+
+.ccc{
+ display: flex;
+ flex-direction: row;
+ justify-content: space-between;
+ align-items: center;
+ padding-left: 20px;
+ top: 400px;
+ position: fixed;
+}
+#ntwari{
+ top:450px;
+ padding-left: 30px;
+ position: fixed;
+}
+
+  .reveal {
+    position: relative;
+    transform: translateY(150px);
+    opacity: 0;
+    transition: 2s all ease;
   }
+  
+  .reveal.active {
+    transform: translateY(0);
+    opacity: 1;
+  }
+  
   .a1{
     position:fixed;
      right:65px;
     width: 15px;
     height: 15px;
-    top: 262px;
+    top: 162px;
     border-radius: 50%;
 
   }  
@@ -284,7 +306,7 @@ color: #fff;
      right:65px;
     width: 15px;
     height: 15px;
-    top: 314px;
+    top: 202px;
     border-radius: 50%;
   }
   .a3{
@@ -292,7 +314,7 @@ color: #fff;
     right:65px;
     width: 15px;
     height: 15px;
-    top: 374px;
+    top: 242px;
     border-radius: 50%;
   }
   .a4{
@@ -300,7 +322,7 @@ color: #fff;
      right:65px;
     width: 15px;
     height: 15px;
-    top: 374px;
+    top: 283px;
     border-radius: 50%;
   }
   .a5{
@@ -308,7 +330,7 @@ color: #fff;
      right:65px;  
     width: 15px;
     height: 15px;
-    top: 427px;
+    top:  322px;
     border-radius: 50%;
   }
   
@@ -317,8 +339,11 @@ color: #fff;
     right:65px;
     width: 15px;
     height: 15px;
-    top: 477px;
+    top:   362px;
     border-radius: 50%;
+  }
+  .a1,.a2, .a3, .a4, .a5, .a6{
+    background-color: #181A1B;
   }
   
 #face{ 
@@ -381,4 +406,32 @@ position:fixed;
   top: 24px;
   position: fixed;
    left: 580px;
+}
+.scroller{
+  /* box-sizing: border-box; */
+  box-sizing: content-box;
+  border: solid #141617;
+  width: 220px;
+  height: 100px;
+  padding-bottom: 8px;
+  overflow-x: scroll;
+
+  
+  padding-left: 20px;
+  top: 100px;
+  position: fixed;
+}
+.scroller::-webkit-scrollbar-track
+{
+-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+background-color:  #141617;
+}
+.scroller::-webkit-scrollbar
+{
+width: 6px;
+background-color:  #141617;
+} 
+.scroller::-webkit-scrollbar-thumb
+{
+background-color: purple;
 }
