--- a/skill.css
+++ b/skill.css
@@ -9,6 +9,20 @@ html{
 body{
 width: 100%;
 }
+ body::-webkit-scrollbar-track
+{
+-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+background-color:  #1C1C1C;
+}
+ body::-webkit-scrollbar
+{
+width: 6px;
+background-color:  #1C1C1C;
+} 
+ body::-webkit-scrollbar-thumb
+{
+background-color: rgba(19, 18, 19, 0.042);
+}
 @media  only screen and (max-width:414px) {
     .body{
         width:100%;
@@ -283,46 +297,66 @@ top: 250.44px;
          /* position:  absolute; */
    }
    
-   /* Dropdown Content (Hidden by Default) */
-   .dropdown-content {
-     display: none;
-     position: absolute;
-     background-color: black;
-     right:0px;
-     min-width: 360px;
-     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-     z-index: 1;
-   }
-   
-   /* Links inside the dropdown */
-   .dropdown-content a {
-     color:white;
-     padding: 12px 16px;
-     text-decoration: none;
-     display: block;
-   }
-   
-   /* Change color of dropdown links on hover */
-   .dropdown-content a:hover {background-color: #ddd;}
-   
-   /* Show the dropdown menu on hover */
-   .dropdown:hover .dropdown-content {display: block;}
-   
-   /* Change the background color of the dropdown button when the dropdown content is shown */
-   .dropdown:hover .dropbtn {background-color: #2F2F2F;}
-  
-   .ccc{
+   .dropdown {
+    display: flexbox;
     display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-  }
+    float: right;
+
+      /* position:  absolute; */
+}
+
+/* Dropdown Content (Hidden by Default) */
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #141617;
+  right:0px;
+  overflow: hidden;
+  min-width: 360px;
+  min-height: 100vh;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+/* Links inside the dropdown */
+.dropdown-content a {
+  color:white;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+/* Change color of dropdown links on hover */
+.dropdown-content a:hover {background-color: #ddd;}
+
+/* Show the dropdown menu on hover */
+.dropdown:hover .dropdown-content {display: block;}
+
+/* Change the background color of the dropdown button when the dropdown content is shown */
+.dropdown:hover .dropbtn {background-color: #2F2F2F;}
+
+.ccc{
+ display: flex;
+ flex-direction: row;
+ justify-content: space-between;
+ align-items: center;
+ padding-left: 20px;
+ top: 400px;
+ position: fixed;
+}
+#ntwari{
+ top:450px;
+ padding-left: 30px;
+ position: fixed;
+}
+
+  
   .a1{
     position:fixed;
      right:65px;
     width: 15px;
     height: 15px;
-    top: 262px;
+    top: 162px;
     border-radius: 50%;
 
   }  
@@ -331,7 +365,7 @@ top: 250.44px;
      right:65px;
     width: 15px;
     height: 15px;
-    top: 314px;
+    top: 202px;
     border-radius: 50%;
   }
   .a3{
@@ -339,7 +373,7 @@ top: 250.44px;
     right:65px;
     width: 15px;
     height: 15px;
-    top: 374px;
+    top: 242px;
     border-radius: 50%;
   }
   .a4{
@@ -347,7 +381,7 @@ top: 250.44px;
      right:65px;
     width: 15px;
     height: 15px;
-    top: 374px;
+    top: 283px;
     border-radius: 50%;
   }
   .a5{
@@ -355,7 +389,7 @@ top: 250.44px;
      right:65px;  
     width: 15px;
     height: 15px;
-    top: 427px;
+    top:  322px;
     border-radius: 50%;
   }
   
@@ -364,9 +398,25 @@ top: 250.44px;
     right:65px;
     width: 15px;
     height: 15px;
-    top: 477px;
+    top:   362px;
     border-radius: 50%;
   }
+  .a1,.a2, .a3, .a4, .a5, .a6{
+    background-color: #181A1B;
+  }
+
+  .reveal {
+    position: relative;
+    transform: translateY(150px);
+    opacity: 0;
+    transition: 2s all ease;
+  }
+  
+  .reveal.active {
+    transform: translateY(0);
+    opacity: 1;
+  }
+  
   
 #face{ 
   /* 🦆 icon "facebook" */
@@ -429,4 +479,43 @@ position:fixed;
   position: fixed;
    left: 580px;
 }
+.reveal{
+  position: relative;
+  transform: translateY(150px);
+  opacity: 0;
+  transition: 1s all ease;
+}
+
+.reveal.active{
+  transform: translateY(0);
+  opacity: 1;
+}
+ 
+.scroller{
+  /* box-sizing: border-box; */
+  box-sizing: content-box;
+  border: solid #141617;
+  width: 220px;
+  height: 100px;
+  padding-bottom: 8px;
+  overflow-x: scroll;
+
   
+  padding-left: 20px;
+  top: 100px;
+  position: fixed;
+}
+.scroller::-webkit-scrollbar-track
+{
+-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+background-color:  #141617;
+}
+.scroller::-webkit-scrollbar
+{
+width: 6px;
+background-color:  #141617;
+} 
+.scroller::-webkit-scrollbar-thumb
+{
+background-color: purple;
+}
