--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,20 @@ body{
     background-color:  #1C1C1C;
     background-size:1553px 982px;
 }
+ /* body::-webkit-scrollbar-track
+{
+-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+background-color:  #1C1C1C;
+} */
+ body::-webkit-scrollbar
+{
+width: 6px;
+background-color:  #1C1C1C;
+} 
+ body::-webkit-scrollbar-thumb
+{
+background-color: rgba(19, 18, 19, 0.042);
+}
 ul{
     list-style-type: none;
   
@@ -36,12 +50,6 @@ a:link { text-decoration: none; }
     position: absolute;
     padding: 2px 2px 2px 2px;
     bottom: 0;
-  }
-  .ashimwe{
-    width: 13px;
-    height: 13px;
-    position: absolute;
-    top: 43px;
   }
   .left{
       width: 35%;
@@ -179,10 +187,12 @@ body{
     bottom: 58px;
   }  
 .ashimwe{
-  font-family: 'Intel';
+  font-family: poppins;;
   font-size: 2em;
   font-weight:bolder;
-  width: 543px;
+
+  
+  width: 390px;
   font-weight: 900;
   color: #fff;
   text-align: left;
@@ -214,12 +224,13 @@ body{
   top: 215px;
   border: 1px solid #FFf;
   }
+  .dropbtn{
+    background-color: #141617;
+  }
 .dropdown {
   display: flexbox;
   display: flex;
   float: right;
-
-    /* position:  absolute; */
 }
 
 /* Dropdown Content (Hidden by Default) */
@@ -267,21 +278,22 @@ padding-left: 30px;
 position: fixed;
 }
  
+ 
 .a1{
   position:fixed;
    right:65px;
   width: 15px;
   height: 15px;
-  top: 262px;
+  top: 162px;
   border-radius: 50%;
-
+ background-color: #DA4C84;
 }  
 .a2{
   position:fixed;
    right:65px;
   width: 15px;
   height: 15px;
-  top: 314px;
+  top: 202px;
   border-radius: 50%;
 }
 .a3{
@@ -289,7 +301,7 @@ position: fixed;
   right:65px;
   width: 15px;
   height: 15px;
-  top: 374px;
+  top: 242px;
   border-radius: 50%;
 }
 .a4{
@@ -297,7 +309,7 @@ position: fixed;
    right:65px;
   width: 15px;
   height: 15px;
-  top: 374px;
+  top: 283px;
   border-radius: 50%;
 }
 .a5{
@@ -305,7 +317,7 @@ position: fixed;
    right:65px;  
   width: 15px;
   height: 15px;
-  top: 427px;
+  top:  322px;
   border-radius: 50%;
 }
 
@@ -314,8 +326,22 @@ position: fixed;
   right:65px;
   width: 15px;
   height: 15px;
-  top: 477px;
+  top:   362px;
   border-radius: 50%;
+}
+.a1,.a2, .a3, .a4, .a5, .a6{
+  background-color: #181A1B;
+}
+.reveal {
+  position: relative;
+  transform: translateY(150px);
+  opacity: 0;
+  transition: 2s all ease;
+}
+
+.reveal.active {
+  transform: translateY(0);
+  opacity: 1;
 }
 #face{ 
 /* 🦆 icon "facebook" */
@@ -379,12 +405,12 @@ cursor:pointer;
 .scroller::-webkit-scrollbar-track
 {
 -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
-background-color: lightgray;
+background-color:  #1C1C1C;
 }
 .scroller::-webkit-scrollbar
 {
 width: 6px;
-background-color: #F5F5F5;
+background-color:  #1C1C1C;
 } 
 .scroller::-webkit-scrollbar-thumb
 {
