--- a/coffee.css
+++ b/coffee.css
@@ -56,6 +56,7 @@ html{
  body{
     width: 100%;
     background-color: #141617;
+    overflow-x: hidden;
  }
   
    body::-webkit-scrollbar-track
@@ -126,11 +127,13 @@ ul{
     bottom:0px;
   }
   .dropdown {
-    display: flexbox;
     display: flex;
     float: right;
-
-      /* position:  absolute; */
+   
+    position: fixed;
+    right: 20px;
+    top: 25px;
+    
 }
 
 /* Dropdown Content (Hidden by Default) */
@@ -180,7 +183,9 @@ ul{
 
   
   .a1{
-    position:fixed;
+
+    display: flex;
+    position: fixed ;
      right:65px;
     width: 15px;
     height: 15px;
@@ -222,15 +227,28 @@ ul{
   }
   
   .a6{
-    position:fixed;
+     position:fixed;
     right:65px;
     width: 15px;
     height: 15px;
-    top:   362px;
-    border-radius: 50%;
+    top:  362px;
+    border-radius: 50%; 
+/* 
+    display:inline-flex;
+    float: right;
+    position: fixed;
+    margin: 2px;
+    padding: 4pc;
+    padding-right: 4pc;
+    right: 0px;
+    bottom:0px; */
+     
   }
   .a1,.a2, .a3, .a4, .a5, .a6{
-    background-color: #181A1B;
+    display: flex;
+   
+    background-color: #579ec2;
+
   }
   .reveal {
     position: relative;
@@ -244,9 +262,11 @@ ul{
     opacity: 1;
   }
   #hor1{
+    width: 300px;
     border:  solid #DA4C84;
   }
   #hor2{
+    width: 300px;
     border:2px solid #DA4C84;
   }
   #face{ 
@@ -451,4 +471,15 @@ background-color:  #141617;
 .scroller::-webkit-scrollbar-thumb
 {
 background-color: purple;
+}
+#button{
+
+  width: 34px;
+  height: 32px;
+
+  background-color: #141617;
+
+}
+#button:hover{
+  background-color: #A91957;
 }
