--- a/cont.css
+++ b/cont.css
@@ -8,6 +8,7 @@ body{
     background-image: url("1000_locations.jpg");
     background-repeat: no-repeat;
     background-size:1553px 982px; 
+    overflow: hidden;
  }
  body::-webkit-scrollbar-track
  {
@@ -31,9 +32,11 @@ ul{
   /* For mobile phones:  */
   body{
      
-      width: 75%;
+      width: 35%;
       margin: 0;
       padding: 0;
+      height: 100%;
+      /* height: max-content(751px);  */
   }
    #number{
     visibility: collapse;
@@ -206,8 +209,11 @@ a:link { text-decoration: none; }
  /* The container <div> - needed to position the dropdown content */
  .dropdown {
      display: flexbox;
-     display: flex;
      float: right;
+      
+     position: fixed;
+     top: 20px;
+     right: 25px;
 
        /* position:  absolute; */
  }
@@ -413,8 +419,7 @@ background-color: purple;
    left: 580px;
 }
  
-
-
+ 
 
 
 
