--- a/recent.css
+++ b/recent.css
@@ -6,6 +6,8 @@ html{
  }
  body{
   width: 100%;
+  height: 100%;
+  overflow: hidden;
  }
  @media only screen and( width: 414px) {
   body{
@@ -231,6 +233,11 @@ color: #fff;
     display: flexbox;
     display: flex;
     float: right;
+
+    position: fixed;
+    top: 20px;
+    right: 25px;
+
 
       /* position:  absolute; */
 }
